--- a/UserRegistration/src/main/resources/application.properties
+++ b/UserRegistration/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.flyway.baseline-on-migrate: true
 #Spring Security Properties
 spring.security.user.name=akheel
 spring.security.user.password=akheel
+
+#Token Secret
+security.token.secret = "asdknk34asd23";
