--- a/UserRegistration/src/main/resources/application.properties
+++ b/UserRegistration/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.security.user.password=akheel
 
 #Token Secret
 security.token.secret = "asdknk34asd23";
+
+#Set Context Path (If Needed)
+#server.servlet.context-path=/user-registration
