--- a/UserRegistration/pom.xml
+++ b/UserRegistration/pom.xml
@@ -40,6 +40,12 @@
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.modelmapper.extensions</groupId>
+			<artifactId>modelmapper-spring</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>mysql</groupId>
