--- a/UserRegistration/src/main/resources/application.properties
+++ b/UserRegistration/src/main/resources/application.properties
@@ -13,4 +13,18 @@ spring.security.user.name=akheel
 spring.security.user.password=akheel
 
 #Token Secret
-security.token.secret = "asdknk34asd23";
+security.token.secret = "signuptoken";
+security.verification.token.secret = "verificationtoken";
+
+###### Email Properties ######
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.username = akheel.pasha138@gmail.com
+spring.mail.password = cvuwwggggbohcjcc
+spring.mail.properties.mail.smtp.starttls.required = true
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.connectiontimeout = 5000
+spring.mail.properties.mail.smtp.timeout = 5000
+spring.mail.properties.mail.smtp.writetimeout = 5000
+
